[package]
name = "mft"
description = "A Fast (and safe) parser for the Windows Master File Table (MFT) format"
homepage = "https://github.com/omerbenamram/mft"
repository = "https://github.com/omerbenamram/mft"
license = "MIT/Apache-2.0"
readme = "README.md"

version = "0.6.1"
authors = ["Omer Ben-Amram <omerbenamram@gmail.com>"]
edition = "2021"

[dependencies]
bitflags = { version = "2.0", features = ["serde"] }
byteorder = "1.0"
csv = "1.0"
encoding = "0.2"
itertools = "0.14"
log = { version = "0.4", features = ["release_max_level_debug"] }
lru = "0.16"
num-derive = "0.4"
num-traits = "0.2"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
winstructs = "0.3"

# `mft_dump` dependencies
anyhow = { version = "1.0", optional = true }
clap = { version = "4.0", optional = true }
dialoguer = { version = "0.11", optional = true }
indoc = { version = "2.0", optional = true }
simplelog = { version = "0.12", optional = true }

[features]
default = ["mft_dump"]
mft_dump = ["anyhow", "simplelog", "dialoguer", "indoc", "clap"]

[dependencies.chrono]
default-features = false
features = ["clock", "serde", "std"]
version = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.7"
env_logger = "0.11"
predicates = "3.0"
skeptic = "0.13"
tempfile = "3.2"

# rexpect relies on unix process semantics, but it's only used for process interaction tests.
[target.'cfg(not(target_os = "windows"))'.dev-dependencies]
rexpect = "0.6"

[build-dependencies]
skeptic = "0.13"

[[bin]]
name = "mft_dump"
required-features = ["mft_dump"]

[[bench]]
name = "benchmark"
path = "./src/benches/benchmark.rs"
harness = false
